# videochat-contracts

./: .gitignore  Makefile  README.md  go.mod
proto/rooms/: rooms.proto
proto/rooms/go/: go.mod
proto/rooms/go/proto/: rooms.pb.go  rooms.pb.gw.go  rooms_grpc.pb.go
proto/rooms/python/proto/: pyproject.toml  rooms_pb2.py  rooms_pb2_grpc.py
proto/rooms/python/proto/src/proto/: rooms_pb2.py  rooms_pb2.pyi  rooms_pb2_grpc.py
