[project]
name = "proto"
version = "0.1.0"
description = "protobuf codegen for the rooms grpc service"
requires-python = ">=3.12"
dependencies = [
    "protobuf>=5.29.1",
    "google-api-python-client>=2.157.0",
    "grpcio>=1.69.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proto"]
